// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigThresholds component Renders ConfigThresholds with data 1`] = `
<ConfigThresholds
  handleConfigChange={
    [MockFunction] {
      "calls": Array [
        Array [
          Array [
            Object {
              "color": "#FC0505",
              "isReadOnly": false,
              "name": "",
              "thid": "random_html_id",
              "value": 0,
            },
            Object {
              "color": "#FC0505",
              "isReadOnly": false,
              "name": "test threshold",
              "thid": "thr_a6cf51b1-60e7-11ed-88bc-e547509e6367",
              "value": "10000000",
            },
          ],
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  props={
    Object {
      "maxLimit": 2,
    }
  }
  sectionName="Thresholds"
  visualizations={
    Object {
      "data": Object {
        "appData": Object {
          "fromApp": false,
        },
        "defaultAxes": Object {
          "xaxis": Array [
            Object {
              "label": "tags",
              "name": "tags",
              "type": "text",
            },
          ],
          "yaxis": Array [
            Object {
              "label": "max(bytes)",
              "name": "max(bytes)",
              "type": "long",
            },
            Object {
              "label": "host",
              "name": "host",
              "type": "text",
            },
          ],
        },
        "indexFields": Object {
          "availableFields": Array [
            Object {
              "name": "agent",
              "type": "string",
            },
            Object {
              "name": "bytes",
              "type": "long",
            },
            Object {
              "name": "clientip",
              "type": "ip",
            },
            Object {
              "name": "event",
              "type": "struct",
            },
            Object {
              "name": "extension",
              "type": "string",
            },
            Object {
              "name": "geo",
              "type": "struct",
            },
            Object {
              "name": "host",
              "type": "string",
            },
            Object {
              "name": "index",
              "type": "string",
            },
            Object {
              "name": "ip",
              "type": "ip",
            },
            Object {
              "name": "machine",
              "type": "struct",
            },
            Object {
              "name": "memory",
              "type": "double",
            },
            Object {
              "name": "message",
              "type": "string",
            },
            Object {
              "name": "phpmemory",
              "type": "long",
            },
            Object {
              "name": "referer",
              "type": "string",
            },
            Object {
              "name": "request",
              "type": "string",
            },
            Object {
              "name": "response",
              "type": "string",
            },
            Object {
              "name": "tags",
              "type": "string",
            },
            Object {
              "name": "timestamp",
              "type": "timestamp",
            },
            Object {
              "name": "url",
              "type": "string",
            },
            Object {
              "name": "utc_time",
              "type": "timestamp",
            },
          ],
          "queriedFields": Array [
            Object {
              "name": "double_per_ip_bytes",
              "type": "long",
            },
            Object {
              "name": "host",
              "type": "text",
            },
            Object {
              "name": "ip_count",
              "type": "integer",
            },
            Object {
              "name": "per_ip_bytes",
              "type": "long",
            },
            Object {
              "name": "resp_code",
              "type": "text",
            },
            Object {
              "name": "sum_bytes",
              "type": "long",
            },
          ],
          "selectedFields": Array [],
          "unselectedFields": Array [],
        },
        "query": Object {},
        "rawVizData": Object {
          "data": Object {
            "host": Array [
              "artifacts.opensearch.org",
              "artifacts.opensearch.org",
              "artifacts.opensearch.org",
              "artifacts.opensearch.org",
              "artifacts.opensearch.org",
              "artifacts.opensearch.org",
              "cdn.opensearch-opensearch-opensearch.org",
              "cdn.opensearch-opensearch-opensearch.org",
              "cdn.opensearch-opensearch-opensearch.org",
              "cdn.opensearch-opensearch-opensearch.org",
            ],
            "max(bytes)": Array [
              19897,
              19904,
              19929,
              19856,
              19904,
              19929,
              9947,
              9998,
              9717,
              9973,
            ],
            "tags": Array [
              "error",
              "info",
              "login",
              "security",
              "success",
              "warning",
              "error",
              "info",
              "login",
              "security",
            ],
          },
          "jsonData": Array [
            Object {
              "host": "artifacts.opensearch.org",
              "max(bytes)": 19897,
              "tags": "error",
            },
            Object {
              "host": "artifacts.opensearch.org",
              "max(bytes)": 19904,
              "tags": "info",
            },
            Object {
              "host": "artifacts.opensearch.org",
              "max(bytes)": 19929,
              "tags": "login",
            },
            Object {
              "host": "artifacts.opensearch.org",
              "max(bytes)": 19856,
              "tags": "security",
            },
            Object {
              "host": "artifacts.opensearch.org",
              "max(bytes)": 19904,
              "tags": "success",
            },
            Object {
              "host": "artifacts.opensearch.org",
              "max(bytes)": 19929,
              "tags": "warning",
            },
            Object {
              "host": "cdn.opensearch-opensearch-opensearch.org",
              "max(bytes)": 9947,
              "tags": "error",
            },
            Object {
              "host": "cdn.opensearch-opensearch-opensearch.org",
              "max(bytes)": 9998,
              "tags": "info",
            },
            Object {
              "host": "cdn.opensearch-opensearch-opensearch.org",
              "max(bytes)": 9717,
              "tags": "login",
            },
            Object {
              "host": "cdn.opensearch-opensearch-opensearch.org",
              "max(bytes)": 9973,
              "tags": "security",
            },
          ],
          "metadata": Object {
            "fields": Array [
              Object {
                "name": "max(bytes)",
                "type": "long",
              },
              Object {
                "name": "host",
                "type": "text",
              },
              Object {
                "name": "tags",
                "type": "text",
              },
            ],
          },
          "size": 10,
          "status": 200,
        },
        "userConfigs": Object {
          "dataConfig": Object {
            "dimensions": Array [
              Object {
                "customLabel": "",
                "label": "host",
                "name": "host",
              },
              Object {
                "customLabel": "",
                "label": "tags",
                "name": "tags",
              },
            ],
            "series": Array [
              Object {
                "aggregation": "max",
                "customLabel": "",
                "label": "bytes",
                "name": "bytes",
              },
            ],
          },
        },
      },
      "vis": Object {
        "barwidth": 0.97,
        "category": "Visualizations",
        "categoryaxis": "xaxis",
        "component": [Function],
        "editorconfig": Object {
          "panelTabs": Array [
            Object {
              "editor": [Function],
              "id": "data-panel",
              "mapTo": "dataConfig",
              "name": "Style",
              "sections": Array [
                Object {
                  "editor": [Function],
                  "id": "tooltip_options",
                  "mapTo": "tooltipOptions",
                  "name": "Tooltip options",
                  "schemas": Array [
                    Object {
                      "component": null,
                      "mapTo": "tooltipMode",
                      "name": "Tooltip mode",
                      "props": Object {
                        "defaultSelections": Array [
                          Object {
                            "id": "show",
                            "name": "Show",
                          },
                        ],
                        "options": Array [
                          Object {
                            "id": "show",
                            "name": "Show",
                          },
                          Object {
                            "id": "hidden",
                            "name": "Hidden",
                          },
                        ],
                      },
                    },
                    Object {
                      "component": null,
                      "mapTo": "tooltipText",
                      "name": "Tooltip text",
                      "props": Object {
                        "defaultSelections": Array [
                          Object {
                            "id": "all",
                            "name": "All",
                          },
                        ],
                        "options": Array [
                          Object {
                            "id": "all",
                            "name": "All",
                          },
                          Object {
                            "id": "x",
                            "name": "Dimension",
                          },
                          Object {
                            "id": "y",
                            "name": "Series",
                          },
                        ],
                      },
                    },
                  ],
                },
                Object {
                  "editor": [Function],
                  "id": "legend",
                  "mapTo": "legend",
                  "name": "Legend",
                  "schemas": Array [
                    Object {
                      "component": null,
                      "mapTo": "showLegend",
                      "name": "Show legend",
                      "props": Object {
                        "defaultSelections": Array [
                          Object {
                            "id": "show",
                            "name": "Show",
                          },
                        ],
                        "options": Array [
                          Object {
                            "id": "show",
                            "name": "Show",
                          },
                          Object {
                            "id": "hidden",
                            "name": "Hidden",
                          },
                        ],
                      },
                    },
                    Object {
                      "component": null,
                      "mapTo": "position",
                      "name": "Position",
                      "props": Object {
                        "defaultSelections": Array [
                          Object {
                            "id": "v",
                            "name": "Right",
                          },
                        ],
                        "options": Array [
                          Object {
                            "id": "v",
                            "name": "Right",
                          },
                          Object {
                            "id": "h",
                            "name": "Bottom",
                          },
                        ],
                      },
                    },
                    Object {
                      "component": [Function],
                      "eleType": "input",
                      "mapTo": "legendSize",
                      "name": "Legend size",
                      "title": "Legend size",
                    },
                  ],
                },
                Object {
                  "editor": [Function],
                  "id": "chart_styles",
                  "mapTo": "chartStyles",
                  "name": "Chart styles",
                  "schemas": Array [
                    Object {
                      "component": [Function],
                      "eleType": "buttons",
                      "mapTo": "mode",
                      "name": "Mode",
                      "props": Object {
                        "defaultSelections": Array [
                          Object {
                            "id": "group",
                            "name": "Group",
                          },
                        ],
                        "options": Array [
                          Object {
                            "id": "group",
                            "name": "Group",
                          },
                          Object {
                            "id": "stack",
                            "name": "Stack",
                          },
                        ],
                      },
                    },
                    Object {
                      "component": [Function],
                      "eleType": "input",
                      "mapTo": "labelSize",
                      "name": "Label size",
                    },
                    Object {
                      "component": [Function],
                      "defaultState": 0,
                      "eleType": "slider",
                      "mapTo": "rotateBarLabels",
                      "name": "Rotate bar labels",
                      "props": Object {
                        "max": 90,
                        "min": -90,
                        "showTicks": true,
                        "ticks": Array [
                          Object {
                            "label": "-90°",
                            "value": -90,
                          },
                          Object {
                            "label": "-45°",
                            "value": -45,
                          },
                          Object {
                            "label": "0°",
                            "value": 0,
                          },
                          Object {
                            "label": "45°",
                            "value": 45,
                          },
                          Object {
                            "label": "90°",
                            "value": 90,
                          },
                        ],
                      },
                    },
                    Object {
                      "component": [Function],
                      "defaultState": 0.7,
                      "eleType": "slider",
                      "mapTo": "groupWidth",
                      "name": "Group width",
                      "props": Object {
                        "max": 1,
                        "step": 0.01,
                      },
                    },
                    Object {
                      "component": [Function],
                      "defaultState": 0.97,
                      "eleType": "slider",
                      "mapTo": "barWidth",
                      "name": "Bar width",
                      "props": Object {
                        "max": 1,
                        "step": 0.01,
                      },
                    },
                    Object {
                      "component": [Function],
                      "defaultState": 2,
                      "eleType": "slider",
                      "mapTo": "lineWidth",
                      "name": "Line width",
                      "props": Object {
                        "max": 10,
                      },
                    },
                    Object {
                      "component": [Function],
                      "defaultState": 70,
                      "eleType": "slider",
                      "mapTo": "fillOpacity",
                      "name": "Fill opacity",
                      "props": Object {
                        "max": 100,
                      },
                    },
                  ],
                },
                Object {
                  "editor": [Function],
                  "id": "color-theme",
                  "mapTo": "colorTheme",
                  "name": "Color theme",
                  "schemas": Array [],
                },
              ],
            },
            Object {
              "editor": [Function],
              "id": "availability-panel",
              "mapTo": "availabilityConfig",
              "name": "Availability",
            },
          ],
        },
        "fillopacity": 70,
        "fulllabel": "Vertical bar",
        "groupwidth": 0.7,
        "icon": [Function],
        "icontype": "visBarVerticalStacked",
        "id": "bar",
        "label": "Vertical bar",
        "labelangle": 0,
        "legendposition": "v",
        "linewidth": 2,
        "mode": "group",
        "name": "bar",
        "orientation": "v",
        "selection": Object {
          "dataLoss": "nothing",
        },
        "seriesaxis": "yaxis",
        "showlegend": "show",
        "type": "bar",
        "visconfig": Object {
          "config": Object {
            "displaylogo": false,
            "responsive": true,
          },
          "isUniColor": false,
          "layout": Object {
            "height": 1180,
            "legend": Object {
              "orientation": "v",
              "traceorder": "normal",
            },
            "margin": Object {
              "b": 30,
              "l": 60,
              "pad": 0,
              "r": 30,
              "t": 50,
            },
            "showlegend": true,
          },
        },
      },
    }
  }
  vizState={
    Array [
      Object {
        "color": "#FC0505",
        "isReadOnly": false,
        "name": "test threshold",
        "thid": "thr_a6cf51b1-60e7-11ed-88bc-e547509e6367",
        "value": "10000000",
      },
    ]
  }
>
  <EuiAccordion
    arrowDisplay="left"
    buttonContent="Thresholds"
    id="configPanel__Thresholds"
    initialIsOpen={true}
    isLoading={false}
    isLoadingMessage={false}
    paddingSize="s"
  >
    <div
      className="euiAccordion euiAccordion-isOpen"
    >
      <div
        className="euiAccordion__triggerWrapper"
      >
        <button
          aria-controls="configPanel__Thresholds"
          aria-expanded={true}
          className="euiAccordion__button"
          id="random_html_id"
          onClick={[Function]}
          type="button"
        >
          <span
            className="euiAccordion__iconWrapper"
          >
            <EuiIcon
              className="euiAccordion__icon euiAccordion__icon-isOpen"
              size="m"
              type="arrowRight"
            >
              <EuiIconArrowRight
                aria-hidden={true}
                className="euiIcon euiIcon--medium euiAccordion__icon euiAccordion__icon-isOpen"
                focusable="false"
                role="img"
                style={null}
              >
                <svg
                  aria-hidden={true}
                  className="euiIcon euiIcon--medium euiAccordion__icon euiAccordion__icon-isOpen"
                  focusable="false"
                  height={16}
                  role="img"
                  style={null}
                  viewBox="0 0 16 16"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5.157 13.069l4.611-4.685a.546.546 0 000-.768L5.158 2.93a.552.552 0 010-.771.53.53 0 01.759 0l4.61 4.684c.631.641.63 1.672 0 2.312l-4.61 4.684a.53.53 0 01-.76 0 .552.552 0 010-.771z"
                    fillRule="nonzero"
                  />
                </svg>
              </EuiIconArrowRight>
            </EuiIcon>
          </span>
          <span
            className="euiIEFlexWrapFix"
          >
            Thresholds
          </span>
        </button>
      </div>
      <div
        aria-labelledby="random_html_id"
        className="euiAccordion__childWrapper"
        id="configPanel__Thresholds"
        role="region"
        tabIndex={-1}
      >
        <EuiResizeObserver
          onResize={[Function]}
        >
          <div>
            <div
              className="euiAccordion__padding--s"
            >
              <EuiButton
                data-test-subj="addThresholdButton"
                fullWidth={true}
                isDisabled={false}
                onClick={[Function]}
                size="s"
              >
                <EuiButtonDisplay
                  baseClassName="euiButton"
                  data-test-subj="addThresholdButton"
                  disabled={false}
                  element="button"
                  fullWidth={true}
                  isDisabled={false}
                  onClick={[Function]}
                  size="s"
                  type="button"
                >
                  <button
                    className="euiButton euiButton--primary euiButton--small euiButton--fullWidth"
                    data-test-subj="addThresholdButton"
                    disabled={false}
                    onClick={[Function]}
                    style={
                      Object {
                        "minWidth": undefined,
                      }
                    }
                    type="button"
                  >
                    <EuiButtonContent
                      className="euiButton__content"
                      iconSide="left"
                      textProps={
                        Object {
                          "className": "euiButton__text",
                        }
                      }
                    >
                      <span
                        className="euiButtonContent euiButton__content"
                      >
                        <span
                          className="euiButton__text"
                        >
                          <AddButtonTextWrapper>
                            + Add threshold
                          </AddButtonTextWrapper>
                        </span>
                      </span>
                    </EuiButtonContent>
                  </button>
                </EuiButtonDisplay>
              </EuiButton>
              <EuiSpacer
                size="s"
              >
                <div
                  className="euiSpacer euiSpacer--s"
                />
              </EuiSpacer>
              <EuiFormRow
                describedByIds={Array []}
                display="row"
                fullWidth={true}
                hasChildLabel={true}
                hasEmptyLabelSpace={false}
                label=""
                labelType="label"
              >
                <div
                  className="euiFormRow euiFormRow--fullWidth"
                  id="random_html_id-row"
                >
                  <div
                    className="euiFormRow__fieldWrapper"
                  >
                    <EuiFlexGroup
                      alignItems="center"
                      gutterSize="xs"
                      id="random_html_id"
                      onBlur={[Function]}
                      onFocus={[Function]}
                    >
                      <div
                        className="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
                        id="random_html_id"
                        onBlur={[Function]}
                        onFocus={[Function]}
                      >
                        <EuiFlexItem
                          grow={3}
                        >
                          <div
                            className="euiFlexItem euiFlexItem--flexGrow3"
                          >
                            <EuiFormRow
                              describedByIds={Array []}
                              display="row"
                              fullWidth={false}
                              hasChildLabel={true}
                              hasEmptyLabelSpace={false}
                              helpText="color"
                              labelType="label"
                            >
                              <div
                                className="euiFormRow"
                                id="random_html_id-row"
                              >
                                <div
                                  className="euiFormRow__fieldWrapper"
                                >
                                  <EuiColorPicker
                                    aria-describedby="random_html_id-help-0"
                                    color="#FC0505"
                                    fullWidth={true}
                                    id="random_html_id"
                                    onBlur={[Function]}
                                    onChange={[Function]}
                                    onFocus={[Function]}
                                  >
                                    <EuiPopover
                                      anchorPosition="downLeft"
                                      attachToAnchor={true}
                                      button={
                                        <EuiFormControlLayout
                                          compressed={false}
                                          fullWidth={true}
                                          icon={
                                            Object {
                                              "side": "right",
                                              "type": "arrowDown",
                                            }
                                          }
                                          onKeyDown={[Function]}
                                          readOnly={false}
                                        >
                                          <div
                                            style={
                                              Object {
                                                "color": "rgb(252,5,5)",
                                              }
                                            }
                                          >
                                            <EuiI18n
                                              defaults={
                                                Array [
                                                  "Press the escape key to close the popover",
                                                  "Press the down key to open a popover containing color options",
                                                  "Transparent",
                                                ]
                                              }
                                              tokens={
                                                Array [
                                                  "euiColorPicker.openLabel",
                                                  "euiColorPicker.closeLabel",
                                                  "euiColorPicker.transparent",
                                                ]
                                              }
                                            >
                                              [Function]
                                            </EuiI18n>
                                          </div>
                                        </EuiFormControlLayout>
                                      }
                                      className="euiColorPicker__popoverAnchor"
                                      closePopover={[Function]}
                                      display="block"
                                      hasArrow={true}
                                      isOpen={false}
                                      ownFocus={false}
                                      panelClassName="euiColorPicker__popoverPanel"
                                      panelPaddingSize="s"
                                    >
                                      <EuiOutsideClickDetector
                                        onOutsideClick={[Function]}
                                      >
                                        <div
                                          className="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiColorPicker__popoverAnchor"
                                          onKeyDown={[Function]}
                                          onMouseDown={[Function]}
                                          onMouseUp={[Function]}
                                          onTouchEnd={[Function]}
                                          onTouchStart={[Function]}
                                        >
                                          <div
                                            className="euiPopover__anchor"
                                          >
                                            <EuiFormControlLayout
                                              compressed={false}
                                              fullWidth={true}
                                              icon={
                                                Object {
                                                  "side": "right",
                                                  "type": "arrowDown",
                                                }
                                              }
                                              onKeyDown={[Function]}
                                              readOnly={false}
                                            >
                                              <div
                                                className="euiFormControlLayout euiFormControlLayout--fullWidth"
                                                onKeyDown={[Function]}
                                              >
                                                <div
                                                  className="euiFormControlLayout__childrenWrapper"
                                                >
                                                  <div
                                                    style={
                                                      Object {
                                                        "color": "rgb(252,5,5)",
                                                      }
                                                    }
                                                  >
                                                    <EuiI18n
                                                      defaults={
                                                        Array [
                                                          "Press the escape key to close the popover",
                                                          "Press the down key to open a popover containing color options",
                                                          "Transparent",
                                                        ]
                                                      }
                                                      tokens={
                                                        Array [
                                                          "euiColorPicker.openLabel",
                                                          "euiColorPicker.closeLabel",
                                                          "euiColorPicker.transparent",
                                                        ]
                                                      }
                                                    >
                                                      <EuiFieldText
                                                        aria-label="Press the down key to open a popover containing color options"
                                                        autoComplete="off"
                                                        className="euiColorPicker__input"
                                                        compressed={false}
                                                        data-test-subj="euiColorPickerAnchor"
                                                        fullWidth={true}
                                                        icon="swatchInput"
                                                        id="random_html_id"
                                                        inputRef={[Function]}
                                                        onBlur={[Function]}
                                                        onChange={[Function]}
                                                        onClick={[Function]}
                                                        onKeyDown={[Function]}
                                                        readOnly={false}
                                                        value="#FC0505"
                                                      >
                                                        <EuiFormControlLayout
                                                          compressed={false}
                                                          fullWidth={true}
                                                          icon="swatchInput"
                                                          inputId="random_html_id"
                                                          readOnly={false}
                                                        >
                                                          <div
                                                            className="euiFormControlLayout euiFormControlLayout--fullWidth"
                                                          >
                                                            <div
                                                              className="euiFormControlLayout__childrenWrapper"
                                                            >
                                                              <EuiValidatableControl>
                                                                <input
                                                                  aria-label="Press the down key to open a popover containing color options"
                                                                  autoComplete="off"
                                                                  className="euiFieldText euiColorPicker__input euiFieldText--withIcon euiFieldText--fullWidth"
                                                                  data-test-subj="euiColorPickerAnchor"
                                                                  id="random_html_id"
                                                                  onBlur={[Function]}
                                                                  onChange={[Function]}
                                                                  onClick={[Function]}
                                                                  onKeyDown={[Function]}
                                                                  readOnly={false}
                                                                  type="text"
                                                                  value="#FC0505"
                                                                />
                                                              </EuiValidatableControl>
                                                              <EuiFormControlLayoutIcons
                                                                compressed={false}
                                                                icon="swatchInput"
                                                              >
                                                                <div
                                                                  className="euiFormControlLayoutIcons"
                                                                >
                                                                  <EuiFormControlLayoutCustomIcon
                                                                    size="m"
                                                                    type="swatchInput"
                                                                  >
                                                                    <span
                                                                      className="euiFormControlLayoutCustomIcon"
                                                                    >
                                                                      <EuiIcon
                                                                        aria-hidden="true"
                                                                        className="euiFormControlLayoutCustomIcon__icon"
                                                                        size="m"
                                                                        type="swatchInput"
                                                                      >
                                                                        <EuiIconEmpty
                                                                          aria-hidden={true}
                                                                          className="euiIcon euiIcon--medium euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                                                                          focusable="false"
                                                                          role="img"
                                                                          style={null}
                                                                        >
                                                                          <svg
                                                                            aria-hidden={true}
                                                                            className="euiIcon euiIcon--medium euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                                                                            focusable="false"
                                                                            height={16}
                                                                            role="img"
                                                                            style={null}
                                                                            viewBox="0 0 16 16"
                                                                            width={16}
                                                                            xmlns="http://www.w3.org/2000/svg"
                                                                          />
                                                                        </EuiIconEmpty>
                                                                      </EuiIcon>
                                                                    </span>
                                                                  </EuiFormControlLayoutCustomIcon>
                                                                </div>
                                                              </EuiFormControlLayoutIcons>
                                                            </div>
                                                          </div>
                                                        </EuiFormControlLayout>
                                                      </EuiFieldText>
                                                    </EuiI18n>
                                                  </div>
                                                  <EuiFormControlLayoutIcons
                                                    compressed={false}
                                                    icon={
                                                      Object {
                                                        "side": "right",
                                                        "type": "arrowDown",
                                                      }
                                                    }
                                                  >
                                                    <div
                                                      className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                                                    >
                                                      <EuiFormControlLayoutCustomIcon
                                                        size="m"
                                                        type="arrowDown"
                                                      >
                                                        <span
                                                          className="euiFormControlLayoutCustomIcon"
                                                        >
                                                          <EuiIcon
                                                            aria-hidden="true"
                                                            className="euiFormControlLayoutCustomIcon__icon"
                                                            size="m"
                                                            type="arrowDown"
                                                          >
                                                            <EuiIconEmpty
                                                              aria-hidden={true}
                                                              className="euiIcon euiIcon--medium euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                                                              focusable="false"
                                                              role="img"
                                                              style={null}
                                                            >
                                                              <svg
                                                                aria-hidden={true}
                                                                className="euiIcon euiIcon--medium euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                                                                focusable="false"
                                                                height={16}
                                                                role="img"
                                                                style={null}
                                                                viewBox="0 0 16 16"
                                                                width={16}
                                                                xmlns="http://www.w3.org/2000/svg"
                                                              />
                                                            </EuiIconEmpty>
                                                          </EuiIcon>
                                                        </span>
                                                      </EuiFormControlLayoutCustomIcon>
                                                    </div>
                                                  </EuiFormControlLayoutIcons>
                                                </div>
                                              </div>
                                            </EuiFormControlLayout>
                                          </div>
                                        </div>
                                      </EuiOutsideClickDetector>
                                    </EuiPopover>
                                  </EuiColorPicker>
                                  <EuiFormHelpText
                                    className="euiFormRow__text"
                                    id="random_html_id-help-0"
                                    key="color"
                                  >
                                    <div
                                      className="euiFormHelpText euiFormRow__text"
                                      id="random_html_id-help-0"
                                    >
                                      color
                                    </div>
                                  </EuiFormHelpText>
                                </div>
                              </div>
                            </EuiFormRow>
                          </div>
                        </EuiFlexItem>
                        <EuiFlexItem
                          grow={5}
                        >
                          <div
                            className="euiFlexItem euiFlexItem--flexGrow5"
                          >
                            <EuiFormRow
                              describedByIds={Array []}
                              display="row"
                              fullWidth={false}
                              hasChildLabel={true}
                              hasEmptyLabelSpace={false}
                              helpText="name"
                              labelType="label"
                            >
                              <div
                                className="euiFormRow"
                                id="random_html_id-row"
                              >
                                <div
                                  className="euiFormRow__fieldWrapper"
                                >
                                  <EuiFieldText
                                    aria-describedby="random_html_id-help-0"
                                    arial-label="Input threshold name"
                                    data-test-subj="nameFieldText"
                                    id="random_html_id"
                                    onBlur={[Function]}
                                    onChange={[Function]}
                                    onFocus={[Function]}
                                    readOnly={false}
                                    value="test threshold"
                                  >
                                    <EuiFormControlLayout
                                      fullWidth={false}
                                      inputId="random_html_id"
                                      readOnly={false}
                                    >
                                      <div
                                        className="euiFormControlLayout"
                                      >
                                        <div
                                          className="euiFormControlLayout__childrenWrapper"
                                        >
                                          <EuiValidatableControl>
                                            <input
                                              aria-describedby="random_html_id-help-0"
                                              arial-label="Input threshold name"
                                              className="euiFieldText"
                                              data-test-subj="nameFieldText"
                                              id="random_html_id"
                                              onBlur={[Function]}
                                              onChange={[Function]}
                                              onFocus={[Function]}
                                              readOnly={false}
                                              type="text"
                                              value="test threshold"
                                            />
                                          </EuiValidatableControl>
                                          <EuiFormControlLayoutIcons />
                                        </div>
                                      </div>
                                    </EuiFormControlLayout>
                                  </EuiFieldText>
                                  <EuiFormHelpText
                                    className="euiFormRow__text"
                                    id="random_html_id-help-0"
                                    key="name"
                                  >
                                    <div
                                      className="euiFormHelpText euiFormRow__text"
                                      id="random_html_id-help-0"
                                    >
                                      name
                                    </div>
                                  </EuiFormHelpText>
                                </div>
                              </div>
                            </EuiFormRow>
                          </div>
                        </EuiFlexItem>
                        <EuiFlexItem
                          grow={5}
                        >
                          <div
                            className="euiFlexItem euiFlexItem--flexGrow5"
                          >
                            <EuiFormRow
                              describedByIds={Array []}
                              display="row"
                              fullWidth={false}
                              hasChildLabel={true}
                              hasEmptyLabelSpace={false}
                              helpText="value"
                              labelType="label"
                            >
                              <div
                                className="euiFormRow"
                                id="random_html_id-row"
                              >
                                <div
                                  className="euiFormRow__fieldWrapper"
                                >
                                  <EuiFieldNumber
                                    aria-describedby="random_html_id-help-0"
                                    aria-label="Input threshold value"
                                    data-test-subj="valueFieldNumber"
                                    fullWidth={true}
                                    id="random_html_id"
                                    onBlur={[Function]}
                                    onChange={[Function]}
                                    onFocus={[Function]}
                                    placeholder="threshold value"
                                    readOnly={false}
                                    value="10000000"
                                  >
                                    <EuiFormControlLayout
                                      compressed={false}
                                      fullWidth={true}
                                      inputId="random_html_id"
                                      isLoading={false}
                                      readOnly={false}
                                    >
                                      <div
                                        className="euiFormControlLayout euiFormControlLayout--fullWidth"
                                      >
                                        <div
                                          className="euiFormControlLayout__childrenWrapper"
                                        >
                                          <EuiValidatableControl>
                                            <input
                                              aria-describedby="random_html_id-help-0"
                                              aria-label="Input threshold value"
                                              className="euiFieldNumber euiFieldNumber--fullWidth"
                                              data-test-subj="valueFieldNumber"
                                              id="random_html_id"
                                              onBlur={[Function]}
                                              onChange={[Function]}
                                              onFocus={[Function]}
                                              placeholder="threshold value"
                                              readOnly={false}
                                              type="number"
                                              value="10000000"
                                            />
                                          </EuiValidatableControl>
                                          <EuiFormControlLayoutIcons
                                            compressed={false}
                                            isLoading={false}
                                          />
                                        </div>
                                      </div>
                                    </EuiFormControlLayout>
                                  </EuiFieldNumber>
                                  <EuiFormHelpText
                                    className="euiFormRow__text"
                                    id="random_html_id-help-0"
                                    key="value"
                                  >
                                    <div
                                      className="euiFormHelpText euiFormRow__text"
                                      id="random_html_id-help-0"
                                    >
                                      value
                                    </div>
                                  </EuiFormHelpText>
                                </div>
                              </div>
                            </EuiFormRow>
                          </div>
                        </EuiFlexItem>
                        <EuiFlexItem
                          grow={1}
                        >
                          <div
                            className="euiFlexItem euiFlexItem--flexGrow1"
                          >
                            <EuiFormRow
                              describedByIds={Array []}
                              display="row"
                              fullWidth={false}
                              hasChildLabel={true}
                              hasEmptyLabelSpace={false}
                              labelType="label"
                            >
                              <div
                                className="euiFormRow"
                                id="random_html_id-row"
                              >
                                <div
                                  className="euiFormRow__fieldWrapper"
                                >
                                  <EuiIcon
                                    id="random_html_id"
                                    onBlur={[Function]}
                                    onClick={[Function]}
                                    onFocus={[Function]}
                                    type="trash"
                                  >
                                    <EuiIconEmpty
                                      aria-hidden={true}
                                      className="euiIcon euiIcon--medium euiIcon-isLoading"
                                      focusable="false"
                                      id="random_html_id"
                                      onBlur={[Function]}
                                      onClick={[Function]}
                                      onFocus={[Function]}
                                      role="img"
                                      style={null}
                                    >
                                      <svg
                                        aria-hidden={true}
                                        className="euiIcon euiIcon--medium euiIcon-isLoading"
                                        focusable="false"
                                        height={16}
                                        id="random_html_id"
                                        onBlur={[Function]}
                                        onClick={[Function]}
                                        onFocus={[Function]}
                                        role="img"
                                        style={null}
                                        viewBox="0 0 16 16"
                                        width={16}
                                        xmlns="http://www.w3.org/2000/svg"
                                      />
                                    </EuiIconEmpty>
                                  </EuiIcon>
                                </div>
                              </div>
                            </EuiFormRow>
                          </div>
                        </EuiFlexItem>
                      </div>
                    </EuiFlexGroup>
                  </div>
                </div>
              </EuiFormRow>
            </div>
          </div>
        </EuiResizeObserver>
      </div>
    </div>
  </EuiAccordion>
</ConfigThresholds>
`;

exports[`ConfigThresholds component Renders ConfigThresholds with empty data 1`] = `
<ConfigThresholds
  handleConfigChange={[MockFunction]}
  props={Object {}}
  sectionName="Thresholds"
  visualizations={
    Object {
      "data": Object {
        "appData": Object {
          "fromApp": false,
        },
        "defaultAxes": Object {
          "xaxis": Array [
            Object {
              "label": "tags",
              "name": "tags",
              "type": "text",
            },
          ],
          "yaxis": Array [
            Object {
              "label": "max(bytes)",
              "name": "max(bytes)",
              "type": "long",
            },
            Object {
              "label": "host",
              "name": "host",
              "type": "text",
            },
          ],
        },
        "indexFields": Object {
          "availableFields": Array [
            Object {
              "name": "agent",
              "type": "string",
            },
            Object {
              "name": "bytes",
              "type": "long",
            },
            Object {
              "name": "clientip",
              "type": "ip",
            },
            Object {
              "name": "event",
              "type": "struct",
            },
            Object {
              "name": "extension",
              "type": "string",
            },
            Object {
              "name": "geo",
              "type": "struct",
            },
            Object {
              "name": "host",
              "type": "string",
            },
            Object {
              "name": "index",
              "type": "string",
            },
            Object {
              "name": "ip",
              "type": "ip",
            },
            Object {
              "name": "machine",
              "type": "struct",
            },
            Object {
              "name": "memory",
              "type": "double",
            },
            Object {
              "name": "message",
              "type": "string",
            },
            Object {
              "name": "phpmemory",
              "type": "long",
            },
            Object {
              "name": "referer",
              "type": "string",
            },
            Object {
              "name": "request",
              "type": "string",
            },
            Object {
              "name": "response",
              "type": "string",
            },
            Object {
              "name": "tags",
              "type": "string",
            },
            Object {
              "name": "timestamp",
              "type": "timestamp",
            },
            Object {
              "name": "url",
              "type": "string",
            },
            Object {
              "name": "utc_time",
              "type": "timestamp",
            },
          ],
          "queriedFields": Array [
            Object {
              "name": "double_per_ip_bytes",
              "type": "long",
            },
            Object {
              "name": "host",
              "type": "text",
            },
            Object {
              "name": "ip_count",
              "type": "integer",
            },
            Object {
              "name": "per_ip_bytes",
              "type": "long",
            },
            Object {
              "name": "resp_code",
              "type": "text",
            },
            Object {
              "name": "sum_bytes",
              "type": "long",
            },
          ],
          "selectedFields": Array [],
          "unselectedFields": Array [],
        },
        "query": Object {},
        "rawVizData": Object {
          "data": Object {
            "host": Array [
              "artifacts.opensearch.org",
              "artifacts.opensearch.org",
              "artifacts.opensearch.org",
              "artifacts.opensearch.org",
              "artifacts.opensearch.org",
              "artifacts.opensearch.org",
              "cdn.opensearch-opensearch-opensearch.org",
              "cdn.opensearch-opensearch-opensearch.org",
              "cdn.opensearch-opensearch-opensearch.org",
              "cdn.opensearch-opensearch-opensearch.org",
            ],
            "max(bytes)": Array [
              19897,
              19904,
              19929,
              19856,
              19904,
              19929,
              9947,
              9998,
              9717,
              9973,
            ],
            "tags": Array [
              "error",
              "info",
              "login",
              "security",
              "success",
              "warning",
              "error",
              "info",
              "login",
              "security",
            ],
          },
          "jsonData": Array [
            Object {
              "host": "artifacts.opensearch.org",
              "max(bytes)": 19897,
              "tags": "error",
            },
            Object {
              "host": "artifacts.opensearch.org",
              "max(bytes)": 19904,
              "tags": "info",
            },
            Object {
              "host": "artifacts.opensearch.org",
              "max(bytes)": 19929,
              "tags": "login",
            },
            Object {
              "host": "artifacts.opensearch.org",
              "max(bytes)": 19856,
              "tags": "security",
            },
            Object {
              "host": "artifacts.opensearch.org",
              "max(bytes)": 19904,
              "tags": "success",
            },
            Object {
              "host": "artifacts.opensearch.org",
              "max(bytes)": 19929,
              "tags": "warning",
            },
            Object {
              "host": "cdn.opensearch-opensearch-opensearch.org",
              "max(bytes)": 9947,
              "tags": "error",
            },
            Object {
              "host": "cdn.opensearch-opensearch-opensearch.org",
              "max(bytes)": 9998,
              "tags": "info",
            },
            Object {
              "host": "cdn.opensearch-opensearch-opensearch.org",
              "max(bytes)": 9717,
              "tags": "login",
            },
            Object {
              "host": "cdn.opensearch-opensearch-opensearch.org",
              "max(bytes)": 9973,
              "tags": "security",
            },
          ],
          "metadata": Object {
            "fields": Array [
              Object {
                "name": "max(bytes)",
                "type": "long",
              },
              Object {
                "name": "host",
                "type": "text",
              },
              Object {
                "name": "tags",
                "type": "text",
              },
            ],
          },
          "size": 10,
          "status": 200,
        },
        "userConfigs": Object {
          "dataConfig": Object {
            "dimensions": Array [
              Object {
                "customLabel": "",
                "label": "host",
                "name": "host",
              },
              Object {
                "customLabel": "",
                "label": "tags",
                "name": "tags",
              },
            ],
            "series": Array [
              Object {
                "aggregation": "max",
                "customLabel": "",
                "label": "bytes",
                "name": "bytes",
              },
            ],
          },
        },
      },
      "vis": Object {
        "barwidth": 0.97,
        "category": "Visualizations",
        "categoryaxis": "xaxis",
        "component": [Function],
        "editorconfig": Object {
          "panelTabs": Array [
            Object {
              "editor": [Function],
              "id": "data-panel",
              "mapTo": "dataConfig",
              "name": "Style",
              "sections": Array [
                Object {
                  "editor": [Function],
                  "id": "tooltip_options",
                  "mapTo": "tooltipOptions",
                  "name": "Tooltip options",
                  "schemas": Array [
                    Object {
                      "component": null,
                      "mapTo": "tooltipMode",
                      "name": "Tooltip mode",
                      "props": Object {
                        "defaultSelections": Array [
                          Object {
                            "id": "show",
                            "name": "Show",
                          },
                        ],
                        "options": Array [
                          Object {
                            "id": "show",
                            "name": "Show",
                          },
                          Object {
                            "id": "hidden",
                            "name": "Hidden",
                          },
                        ],
                      },
                    },
                    Object {
                      "component": null,
                      "mapTo": "tooltipText",
                      "name": "Tooltip text",
                      "props": Object {
                        "defaultSelections": Array [
                          Object {
                            "id": "all",
                            "name": "All",
                          },
                        ],
                        "options": Array [
                          Object {
                            "id": "all",
                            "name": "All",
                          },
                          Object {
                            "id": "x",
                            "name": "Dimension",
                          },
                          Object {
                            "id": "y",
                            "name": "Series",
                          },
                        ],
                      },
                    },
                  ],
                },
                Object {
                  "editor": [Function],
                  "id": "legend",
                  "mapTo": "legend",
                  "name": "Legend",
                  "schemas": Array [
                    Object {
                      "component": null,
                      "mapTo": "showLegend",
                      "name": "Show legend",
                      "props": Object {
                        "defaultSelections": Array [
                          Object {
                            "id": "show",
                            "name": "Show",
                          },
                        ],
                        "options": Array [
                          Object {
                            "id": "show",
                            "name": "Show",
                          },
                          Object {
                            "id": "hidden",
                            "name": "Hidden",
                          },
                        ],
                      },
                    },
                    Object {
                      "component": null,
                      "mapTo": "position",
                      "name": "Position",
                      "props": Object {
                        "defaultSelections": Array [
                          Object {
                            "id": "v",
                            "name": "Right",
                          },
                        ],
                        "options": Array [
                          Object {
                            "id": "v",
                            "name": "Right",
                          },
                          Object {
                            "id": "h",
                            "name": "Bottom",
                          },
                        ],
                      },
                    },
                    Object {
                      "component": [Function],
                      "eleType": "input",
                      "mapTo": "legendSize",
                      "name": "Legend size",
                      "title": "Legend size",
                    },
                  ],
                },
                Object {
                  "editor": [Function],
                  "id": "chart_styles",
                  "mapTo": "chartStyles",
                  "name": "Chart styles",
                  "schemas": Array [
                    Object {
                      "component": [Function],
                      "eleType": "buttons",
                      "mapTo": "mode",
                      "name": "Mode",
                      "props": Object {
                        "defaultSelections": Array [
                          Object {
                            "id": "group",
                            "name": "Group",
                          },
                        ],
                        "options": Array [
                          Object {
                            "id": "group",
                            "name": "Group",
                          },
                          Object {
                            "id": "stack",
                            "name": "Stack",
                          },
                        ],
                      },
                    },
                    Object {
                      "component": [Function],
                      "eleType": "input",
                      "mapTo": "labelSize",
                      "name": "Label size",
                    },
                    Object {
                      "component": [Function],
                      "defaultState": 0,
                      "eleType": "slider",
                      "mapTo": "rotateBarLabels",
                      "name": "Rotate bar labels",
                      "props": Object {
                        "max": 90,
                        "min": -90,
                        "showTicks": true,
                        "ticks": Array [
                          Object {
                            "label": "-90°",
                            "value": -90,
                          },
                          Object {
                            "label": "-45°",
                            "value": -45,
                          },
                          Object {
                            "label": "0°",
                            "value": 0,
                          },
                          Object {
                            "label": "45°",
                            "value": 45,
                          },
                          Object {
                            "label": "90°",
                            "value": 90,
                          },
                        ],
                      },
                    },
                    Object {
                      "component": [Function],
                      "defaultState": 0.7,
                      "eleType": "slider",
                      "mapTo": "groupWidth",
                      "name": "Group width",
                      "props": Object {
                        "max": 1,
                        "step": 0.01,
                      },
                    },
                    Object {
                      "component": [Function],
                      "defaultState": 0.97,
                      "eleType": "slider",
                      "mapTo": "barWidth",
                      "name": "Bar width",
                      "props": Object {
                        "max": 1,
                        "step": 0.01,
                      },
                    },
                    Object {
                      "component": [Function],
                      "defaultState": 2,
                      "eleType": "slider",
                      "mapTo": "lineWidth",
                      "name": "Line width",
                      "props": Object {
                        "max": 10,
                      },
                    },
                    Object {
                      "component": [Function],
                      "defaultState": 70,
                      "eleType": "slider",
                      "mapTo": "fillOpacity",
                      "name": "Fill opacity",
                      "props": Object {
                        "max": 100,
                      },
                    },
                  ],
                },
                Object {
                  "editor": [Function],
                  "id": "color-theme",
                  "mapTo": "colorTheme",
                  "name": "Color theme",
                  "schemas": Array [],
                },
              ],
            },
            Object {
              "editor": [Function],
              "id": "availability-panel",
              "mapTo": "availabilityConfig",
              "name": "Availability",
            },
          ],
        },
        "fillopacity": 70,
        "fulllabel": "Vertical bar",
        "groupwidth": 0.7,
        "icon": [Function],
        "icontype": "visBarVerticalStacked",
        "id": "bar",
        "label": "Vertical bar",
        "labelangle": 0,
        "legendposition": "v",
        "linewidth": 2,
        "mode": "group",
        "name": "bar",
        "orientation": "v",
        "selection": Object {
          "dataLoss": "nothing",
        },
        "seriesaxis": "yaxis",
        "showlegend": "show",
        "type": "bar",
        "visconfig": Object {
          "config": Object {
            "displaylogo": false,
            "responsive": true,
          },
          "isUniColor": false,
          "layout": Object {
            "height": 1180,
            "legend": Object {
              "orientation": "v",
              "traceorder": "normal",
            },
            "margin": Object {
              "b": 30,
              "l": 60,
              "pad": 0,
              "r": 30,
              "t": 50,
            },
            "showlegend": true,
          },
        },
      },
    }
  }
  vizState={Array []}
>
  <EuiAccordion
    arrowDisplay="left"
    buttonContent="Thresholds"
    id="configPanel__Thresholds"
    initialIsOpen={true}
    isLoading={false}
    isLoadingMessage={false}
    paddingSize="s"
  >
    <div
      className="euiAccordion euiAccordion-isOpen"
    >
      <div
        className="euiAccordion__triggerWrapper"
      >
        <button
          aria-controls="configPanel__Thresholds"
          aria-expanded={true}
          className="euiAccordion__button"
          id="random_html_id"
          onClick={[Function]}
          type="button"
        >
          <span
            className="euiAccordion__iconWrapper"
          >
            <EuiIcon
              className="euiAccordion__icon euiAccordion__icon-isOpen"
              size="m"
              type="arrowRight"
            >
              <EuiIconEmpty
                aria-hidden={true}
                className="euiIcon euiIcon--medium euiIcon-isLoading euiAccordion__icon euiAccordion__icon-isOpen"
                focusable="false"
                role="img"
                style={null}
              >
                <svg
                  aria-hidden={true}
                  className="euiIcon euiIcon--medium euiIcon-isLoading euiAccordion__icon euiAccordion__icon-isOpen"
                  focusable="false"
                  height={16}
                  role="img"
                  style={null}
                  viewBox="0 0 16 16"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                />
              </EuiIconEmpty>
            </EuiIcon>
          </span>
          <span
            className="euiIEFlexWrapFix"
          >
            Thresholds
          </span>
        </button>
      </div>
      <div
        aria-labelledby="random_html_id"
        className="euiAccordion__childWrapper"
        id="configPanel__Thresholds"
        role="region"
        tabIndex={-1}
      >
        <EuiResizeObserver
          onResize={[Function]}
        >
          <div>
            <div
              className="euiAccordion__padding--s"
            >
              <EuiButton
                data-test-subj="addThresholdButton"
                fullWidth={true}
                onClick={[Function]}
                size="s"
              >
                <EuiButtonDisplay
                  baseClassName="euiButton"
                  data-test-subj="addThresholdButton"
                  disabled={false}
                  element="button"
                  fullWidth={true}
                  isDisabled={false}
                  onClick={[Function]}
                  size="s"
                  type="button"
                >
                  <button
                    className="euiButton euiButton--primary euiButton--small euiButton--fullWidth"
                    data-test-subj="addThresholdButton"
                    disabled={false}
                    onClick={[Function]}
                    style={
                      Object {
                        "minWidth": undefined,
                      }
                    }
                    type="button"
                  >
                    <EuiButtonContent
                      className="euiButton__content"
                      iconSide="left"
                      textProps={
                        Object {
                          "className": "euiButton__text",
                        }
                      }
                    >
                      <span
                        className="euiButtonContent euiButton__content"
                      >
                        <span
                          className="euiButton__text"
                        >
                          <AddButtonTextWrapper>
                            + Add threshold
                          </AddButtonTextWrapper>
                        </span>
                      </span>
                    </EuiButtonContent>
                  </button>
                </EuiButtonDisplay>
              </EuiButton>
              <EuiSpacer
                size="s"
              >
                <div
                  className="euiSpacer euiSpacer--s"
                />
              </EuiSpacer>
            </div>
          </div>
        </EuiResizeObserver>
      </div>
    </div>
  </EuiAccordion>
</ConfigThresholds>
`;
